# api-gateway/api/models/otp.go
@@ -1,6 +1,11 @@
 package models
 
 type (
+	Login struct {
+		Email    string `json:"email"`
+		Password string `json:"password"`
+	}
+
 	Otp struct {
 		Email string `json:"email"`
 		Code  string `json:"code"`
